@@ -27,7 +27,7 @@
 INCDIRS = -I./ -I../
 
 # targets
-TARGETS = operation.o number.o concatenation.o lconcatenation.o identifier.o range.o expression.o port.o variable.o assign.o block.o seqblock.o genblock.o case.o if.o while.o for.o module.o instance.o library.o
+TARGETS = operation.o number.o concatenation.o lconcatenation.o identifier.o range.o range_array.o expression.o port.o variable.o assign.o block.o seqblock.o genblock.o case.o if.o while.o for.o module.o instance.o library.o
 HEADERS = $(wildcard ./*.h)
 
 # actions
